--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ nav li {
 
 nav a {
   text-decoration: none;
-  color: var(--grey);
+  color: var(--dark-grey);
   font-weight: 700;
   padding: 0.25em 0;
 }
@@ -81,11 +81,11 @@ nav a:focus {
 }
 
 .current-page {
-  border-bottom: 1px solid var(--grey);
+  border-bottom: 1px solid var(--dark-grey);
 }
 
 .current-page:hover {
-  color: var(--grey);
+  color: var(--dark-grey);
 }
 
 @media (max-width: 675px) {
