--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,22 @@ h1 {
   color: var(--dark-blue);
 }
 
+h2 {
+  color: var(--dark-blue);
+}
+
+h3 {
+  color: var(--light-blue);
+  font-family: "Lora", serif;
+  font-size: 1.6rem;
+  font-weight: 400;
+}
+
+p {
+  color: var(--dark-grey);
+  font-size: 1.2rem;
+}
+
 .subtitle {
   font-weight: 700;
   color: #1792d2;
