--- a/css/style.css
+++ b/css/style.css
@@ -37,9 +37,10 @@ img {
 }
 
 header {
-  background-color: var(--light);
+  background-color: var(--light-grey);
   padding: 2em 0;
   text-align: center;
+  margin-bottom: 2em;
 }
 
 /*********************
@@ -177,23 +178,11 @@ Articles
 }
 
 .article-featured img {
-  order: 1;
+  order: -2;
 }
 
-.article-info {
-  order: 2;
-}
-
-.article-featured h2 {
-  order: 3;
-}
-
-.article-featured .article-body {
-  order: 4;
-}
-
-.article-featured .article-read-more {
-  order: 5;
+.article-featured .article-info {
+  order: -1;
 }
 
 .article-recent {
