--- a/css/style.css
+++ b/css/style.css
@@ -203,14 +203,20 @@ article-recent-secondary {
       Sidebar
 **********************/
 .sidebar-widget {
-  border: 20px solid var(--grey);
+  border: 15px solid var(--grey);
   margin-bottom: 2em;
   padding: 1em;
+}
+
+.sidebar-widget h2,
+.widget-recent-post-title {
+  font-size: 1.125rem;
 }
 
 .sidebar-widget h2 {
   font-family: "Ubuntu", sans-serif;
   font-weight: 700;
+  text-transform: uppercase;
 }
 
 .sidebar-widget-body {
@@ -220,11 +226,17 @@ article-recent-secondary {
 .widget-recent-post {
   display: flex;
   flex-direction: column;
+  margin-bottom: 1em;
+  border-bottom: 1px solid var(--grey);
+}
+
+.widget-recent-post:last-child {
+  border-bottom: 0;
+  margin: 0;
 }
 
 .widget-recent-post-title {
   order: 2;
-  font-size: 1.125rem;
 }
 
 .widget-recent-post .widget-image {
